--- a/free-nodes/2025-8-11-free-node-subscribe-links.htm
+++ b/free-nodes/2025-8-11-free-node-subscribe-links.htm
@@ -157,6 +157,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-8-10-free-subscribe-node.htm">8月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-8-12-free-subscribe-node.htm">8月12日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -185,16 +186,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-node-share.htm" title="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-free-node-subscribe.htm" title="7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-27-node-share.htm" title="7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-3-free-node-subscribe-links.htm" title="8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-29-free-high-speed-nodes.htm" title="7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-free-node-subscribe-links.htm" title="8月17日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">8月17日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe-links.htm" title="7月10日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月10日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-high-speed-nodes.htm" title="7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-free-high-speed-nodes.htm" title="8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月14日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-free-node-subscribe.htm" title="7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">7月20日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-2-free-subscribe-node.htm" title="8月2日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月2日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-30-node-share.htm" title="7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月30日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" title="8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-15-free-high-speed-nodes.htm" title="7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -206,7 +207,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
