--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -121,6 +121,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-28-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="7月28日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-28-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月28日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、新加坡、欧洲、美国、香港、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-27">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-27-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-27-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月27日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、日本、美国、加拿大、韩国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-26-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-26-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、香港、欧洲、韩国、美国、日本等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-25-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-25-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、加拿大、欧洲、新加坡、日本、韩国、美国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-24-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-24-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、加拿大、韩国、香港、日本、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-07-23">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-7-23-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-7-23-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">7月23日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、欧洲、日本、加拿大、美国、香港、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-07-22">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-7-22-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -177,92 +261,8 @@
                                     这一次的节点更新覆盖了欧洲、香港、加拿大、韩国、新加坡、美国、日本等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-18">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-18-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-18-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月18日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、美国、日本、香港、新加坡、欧洲等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-17">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-17-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-17-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、欧洲、新加坡、香港、韩国、加拿大、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-16">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、日本、欧洲、新加坡、香港、加拿大、韩国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-15">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、香港、韩国、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-14">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-14-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-14-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月14日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、新加坡、香港、加拿大、欧洲、美国、韩国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-13-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月13日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、美国、香港、加拿大、欧洲、韩国、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-7-24-free-node-subscribe.htm" title="7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">7月24日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-free-node-subscribe.htm" title="8月15日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址">8月15日→21.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-free-high-speed-nodes.htm" title="7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月9日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-node-share.htm" title="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-free-subscribe-node.htm" title="8月4日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月4日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-11-free-node-subscribe-links.htm" title="8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">8月11日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-31-free-high-speed-nodes.htm" title="7月31日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月31日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share-links.htm" title="8月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-16-free-high-speed-nodes.htm" title="7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月16日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-6-node-share-links.htm" title="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-26-node-share.htm" title="7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月26日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-free-subscribe-node.htm" title="8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">8月9日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-node-share-links.htm" title="8月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">8月7日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-29-free-high-speed-nodes.htm" title="7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">7月29日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-7-node-share.htm" title="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-free-subscribe-node.htm" title="7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月17日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
